=OPT: Undone SendMessageService Return value; was not used any way +ADD: Split On- and Offboarding of CUs (Will be submitted before in different pullRequest) =OPT: Replaced Typed Classes with sealed Class "EncodeMessageResponse"(JSON/Protobuf) =OPT: Updated Formating corresponding to Project requirements +ADD: ListEndpointsService to be compatible with current develop branch +ADD: Updated SendMessageServiceImpl like the other classes before -FIX: Onboarding VCU was broken; will be also commited in different pull request for the current develop code +ADD: TestCases for Protobuf Encoding -FIX: Missing dependency in agrirouter-api-impl lead to failing tests in IntelliJ. Will have been pushed in different PullRequest before this one.